--- a/input/conclusion.tex
+++ b/input/conclusion.tex
@@ -1,7 +1,7 @@
 \section{Conclusion}
 
 In this paper, we presented an original allocation strategy for sequence CRDTs
-called \NAME{}. Compared to state of art, \NAME{} is adaptive i.e. handle
+called \NAME{}. Compared to state of art, \NAME{} is adaptive, i.e., it handles
 unpredictable different editing behaviour and achieves sub-linear space
 complexity. Consequently \NAME{} does not require a costly protocol to garbage
 or rebalance identifiers, and is suitable for building better distributed
@@ -14,8 +14,8 @@ Three components compose \NAME{}:
   \item a random strategy choice.
 \end{inparaenum}
 
-If each component cannot achieve sub-linear complexity, the conjunction of
-three components provides the expected behaviour. Experimentations show that
+Although each component cannot achieve sub-linear complexity, the conjunction
+of three components provides the expected behaviour. Experimentats show that
 even if \NAME{} makes a bad strategy choice for one level in the tree, this
 choice will be overwhelmed by the gain obtained at next levels.
 
@@ -35,7 +35,7 @@ allocation strategy.
 Future works include a formal demonstration of the empiric poly-logarithmic
 upper-bound in space complexity which implies a probabilistic study of the
 worst-case. The idea is to prove that its probability of happening is
-negligible. We also plan to study if concurrency affects LSEQ results i.e. if
+negligible. We also plan to study if concurrency affects LSEQ results, i.e., if
 each site makes different allocation choices concurently, does it impact
 \NAME{} performances? Finally, we aim to study if using documents spectrum
 knowledge and machine-learning approaches can outperform random strategy
